--- a/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/notebooks/20_test_minio_spark_iceberg_polaris.ipynb
+++ b/1-batch/docker/17_minio_spark_iceberg_polaris_postgres/notebooks/20_test_minio_spark_iceberg_polaris.ipynb
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11:55:34] [Thread-3] WARN  org.apache.hadoop.util.NativeCodeLoader - Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "[07:49:42] [Thread-3] WARN  org.apache.hadoop.util.NativeCodeLoader - Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -102,8 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11:55:43] [Thread-3] INFO  org.apache.iceberg.rest.auth.AuthManagers - Loading AuthManager implementation: org.apache.iceberg.rest.auth.OAuth2Manager\n",
-      "[11:55:44] [Thread-3] INFO  org.apache.iceberg.CatalogUtil - Loading custom FileIO implementation: org.apache.iceberg.aws.s3.S3FileIO\n"
+      "[07:49:51] [Thread-3] INFO  org.apache.iceberg.rest.auth.AuthManagers - Loading AuthManager implementation: org.apache.iceberg.rest.auth.OAuth2Manager\n",
+      "[07:49:53] [Thread-3] INFO  org.apache.iceberg.CatalogUtil - Loading custom FileIO implementation: org.apache.iceberg.aws.s3.S3FileIO\n"
      ]
     },
     {
@@ -154,9 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11:55:49] [Thread-3] INFO  org.apache.iceberg.rest.RESTSessionCatalog - Table properties set at catalog level through catalog properties: {}\n",
-      "[11:55:49] [Thread-3] INFO  org.apache.iceberg.rest.RESTSessionCatalog - Table properties enforced at catalog level through catalog properties: {}\n",
-      "[11:55:50] [Thread-3] INFO  org.apache.iceberg.CatalogUtil - Loading custom FileIO implementation: org.apache.iceberg.aws.s3.S3FileIO\n"
+      "[07:49:59] [Thread-3] INFO  org.apache.iceberg.CatalogUtil - Loading custom FileIO implementation: org.apache.iceberg.aws.s3.S3FileIO\n"
      ]
     },
     {
@@ -218,23 +216,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11:55:56] [Thread-3] INFO  org.apache.iceberg.spark.source.SparkWrite - Committing append with 2 new data files to table polaris.olist_raw.test_connection\n",
-      "[11:55:56] [Thread-3] INFO  org.apache.iceberg.SnapshotProducer - Committed snapshot 6366652063505330749 (MergeAppend)\n",
-      "[11:55:56] [Thread-3] INFO  org.apache.iceberg.metrics.LoggingMetricsReporter - Received metrics report: CommitReport{tableName=polaris.olist_raw.test_connection, snapshotId=6366652063505330749, sequenceNumber=1, operation=append, commitMetrics=CommitMetricsResult{totalDuration=TimerResult{timeUnit=NANOSECONDS, totalDuration=PT0.625524156S, count=1}, attempts=CounterResult{unit=COUNT, value=1}, addedDataFiles=CounterResult{unit=COUNT, value=2}, removedDataFiles=null, totalDataFiles=CounterResult{unit=COUNT, value=2}, addedDeleteFiles=null, addedEqualityDeleteFiles=null, addedPositionalDeleteFiles=null, addedDVs=null, removedDeleteFiles=null, removedEqualityDeleteFiles=null, removedPositionalDeleteFiles=null, removedDVs=null, totalDeleteFiles=CounterResult{unit=COUNT, value=0}, addedRecords=CounterResult{unit=COUNT, value=2}, removedRecords=null, totalRecords=CounterResult{unit=COUNT, value=2}, addedFilesSizeInBytes=CounterResult{unit=BYTES, value=1327}, removedFilesSizeInBytes=null, totalFilesSizeInBytes=CounterResult{unit=BYTES, value=1327}, addedPositionalDeletes=null, removedPositionalDeletes=null, totalPositionalDeletes=CounterResult{unit=COUNT, value=0}, addedEqualityDeletes=null, removedEqualityDeletes=null, totalEqualityDeletes=CounterResult{unit=COUNT, value=0}, manifestsCreated=null, manifestsReplaced=null, manifestsKept=null, manifestEntriesProcessed=null}, metadata={engine-version=4.0.1, app-id=local-1767354935796, engine-name=spark, iceberg-version=Apache Iceberg 1.10.1 (commit ccb8bc435062171e64bc8b7e5f56e6aed9c5b934)}}\n",
-      "[11:55:56] [Thread-3] INFO  org.apache.iceberg.spark.source.SparkWrite - Committed in 764 ms\n",
-      "[11:55:57] [Thread-3] INFO  org.apache.iceberg.SnapshotScan - Scanning table polaris.olist_raw.test_connection snapshot 6366652063505330749 created at 2026-01-02T11:55:56.511+00:00 with filter true\n",
-      "[11:55:57] [Thread-3] INFO  org.apache.iceberg.BaseDistributedDataScan - Planning file tasks locally for table polaris.olist_raw.test_connection\n",
-      "[11:55:57] [Thread-3] INFO  org.apache.iceberg.metrics.LoggingMetricsReporter - Received metrics report: ScanReport{tableName=polaris.olist_raw.test_connection, snapshotId=6366652063505330749, filter=true, schemaId=0, projectedFieldIds=[1, 2], projectedFieldNames=[id, status], scanMetrics=ScanMetricsResult{totalPlanningDuration=TimerResult{timeUnit=NANOSECONDS, totalDuration=PT0.069229466S, count=1}, resultDataFiles=CounterResult{unit=COUNT, value=2}, resultDeleteFiles=CounterResult{unit=COUNT, value=0}, totalDataManifests=CounterResult{unit=COUNT, value=1}, totalDeleteManifests=CounterResult{unit=COUNT, value=0}, scannedDataManifests=CounterResult{unit=COUNT, value=1}, skippedDataManifests=CounterResult{unit=COUNT, value=0}, totalFileSizeInBytes=CounterResult{unit=BYTES, value=1327}, totalDeleteFileSizeInBytes=CounterResult{unit=BYTES, value=0}, skippedDataFiles=CounterResult{unit=COUNT, value=0}, skippedDeleteFiles=CounterResult{unit=COUNT, value=0}, scannedDeleteManifests=CounterResult{unit=COUNT, value=0}, skippedDeleteManifests=CounterResult{unit=COUNT, value=0}, indexedDeleteFiles=CounterResult{unit=COUNT, value=0}, equalityDeleteFiles=CounterResult{unit=COUNT, value=0}, positionalDeleteFiles=CounterResult{unit=COUNT, value=0}, dvs=CounterResult{unit=COUNT, value=0}}, metadata={engine-version=4.0.1, iceberg-version=Apache Iceberg 1.10.1 (commit ccb8bc435062171e64bc8b7e5f56e6aed9c5b934), app-id=local-1767354935796, engine-name=spark}}\n",
-      "[11:55:57] [Thread-3] INFO  org.apache.iceberg.spark.source.SparkPartitioningAwareScan - Reporting UnknownPartitioning with 1 partition(s) for table polaris.olist_raw.test_connection\n",
-      "[11:55:57] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.spark.data.vectorized.VectorizedSparkParquetReaders - Enabling arrow.enable_unsafe_memory_access\n",
-      "[11:55:57] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.spark.data.vectorized.VectorizedSparkParquetReaders - Disabling arrow.enable_null_check_for_get\n",
-      "[11:55:57] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.shaded.org.apache.arrow.memory.BaseAllocator - Debug mode disabled. Enable with the VM option -Darrow.memory.debug.allocator=true.\n",
-      "[11:55:57] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.shaded.org.apache.arrow.memory.DefaultAllocationManagerOption - allocation manager type not specified, using netty as the default type\n",
-      "[11:55:57] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.shaded.org.apache.arrow.memory.CheckAllocator - Using DefaultAllocationManager at memory/DefaultAllocationManagerFactory.class\n",
+      "[07:50:05] [Thread-3] INFO  org.apache.iceberg.spark.source.SparkWrite - Committing append with 2 new data files to table polaris.olist_raw.test_connection\n",
+      "[07:50:06] [Thread-3] INFO  org.apache.iceberg.SnapshotProducer - Committed snapshot 4322786829089748504 (MergeAppend)\n",
+      "[07:50:06] [Thread-3] INFO  org.apache.iceberg.metrics.LoggingMetricsReporter - Received metrics report: CommitReport{tableName=polaris.olist_raw.test_connection, snapshotId=4322786829089748504, sequenceNumber=2, operation=append, commitMetrics=CommitMetricsResult{totalDuration=TimerResult{timeUnit=NANOSECONDS, totalDuration=PT0.705782153S, count=1}, attempts=CounterResult{unit=COUNT, value=1}, addedDataFiles=CounterResult{unit=COUNT, value=2}, removedDataFiles=null, totalDataFiles=CounterResult{unit=COUNT, value=4}, addedDeleteFiles=null, addedEqualityDeleteFiles=null, addedPositionalDeleteFiles=null, addedDVs=null, removedDeleteFiles=null, removedEqualityDeleteFiles=null, removedPositionalDeleteFiles=null, removedDVs=null, totalDeleteFiles=CounterResult{unit=COUNT, value=0}, addedRecords=CounterResult{unit=COUNT, value=2}, removedRecords=null, totalRecords=CounterResult{unit=COUNT, value=4}, addedFilesSizeInBytes=CounterResult{unit=BYTES, value=1327}, removedFilesSizeInBytes=null, totalFilesSizeInBytes=CounterResult{unit=BYTES, value=2654}, addedPositionalDeletes=null, removedPositionalDeletes=null, totalPositionalDeletes=CounterResult{unit=COUNT, value=0}, addedEqualityDeletes=null, removedEqualityDeletes=null, totalEqualityDeletes=CounterResult{unit=COUNT, value=0}, manifestsCreated=null, manifestsReplaced=null, manifestsKept=null, manifestEntriesProcessed=null}, metadata={engine-version=4.0.1, app-id=local-1767426583712, engine-name=spark, iceberg-version=Apache Iceberg 1.10.1 (commit ccb8bc435062171e64bc8b7e5f56e6aed9c5b934)}}\n",
+      "[07:50:06] [Thread-3] INFO  org.apache.iceberg.spark.source.SparkWrite - Committed in 849 ms\n",
+      "[07:50:06] [Thread-3] INFO  org.apache.iceberg.SnapshotScan - Scanning table polaris.olist_raw.test_connection snapshot 4322786829089748504 created at 2026-01-03T07:50:06.218+00:00 with filter true\n",
+      "[07:50:06] [Thread-3] INFO  org.apache.iceberg.BaseDistributedDataScan - Planning file tasks locally for table polaris.olist_raw.test_connection\n",
+      "[07:50:06] [Thread-3] INFO  org.apache.iceberg.metrics.LoggingMetricsReporter - Received metrics report: ScanReport{tableName=polaris.olist_raw.test_connection, snapshotId=4322786829089748504, filter=true, schemaId=0, projectedFieldIds=[1, 2], projectedFieldNames=[id, status], scanMetrics=ScanMetricsResult{totalPlanningDuration=TimerResult{timeUnit=NANOSECONDS, totalDuration=PT0.08970833S, count=1}, resultDataFiles=CounterResult{unit=COUNT, value=4}, resultDeleteFiles=CounterResult{unit=COUNT, value=0}, totalDataManifests=CounterResult{unit=COUNT, value=2}, totalDeleteManifests=CounterResult{unit=COUNT, value=0}, scannedDataManifests=CounterResult{unit=COUNT, value=2}, skippedDataManifests=CounterResult{unit=COUNT, value=0}, totalFileSizeInBytes=CounterResult{unit=BYTES, value=2654}, totalDeleteFileSizeInBytes=CounterResult{unit=BYTES, value=0}, skippedDataFiles=CounterResult{unit=COUNT, value=0}, skippedDeleteFiles=CounterResult{unit=COUNT, value=0}, scannedDeleteManifests=CounterResult{unit=COUNT, value=0}, skippedDeleteManifests=CounterResult{unit=COUNT, value=0}, indexedDeleteFiles=CounterResult{unit=COUNT, value=0}, equalityDeleteFiles=CounterResult{unit=COUNT, value=0}, positionalDeleteFiles=CounterResult{unit=COUNT, value=0}, dvs=CounterResult{unit=COUNT, value=0}}, metadata={engine-version=4.0.1, iceberg-version=Apache Iceberg 1.10.1 (commit ccb8bc435062171e64bc8b7e5f56e6aed9c5b934), app-id=local-1767426583712, engine-name=spark}}\n",
+      "[07:50:06] [Thread-3] INFO  org.apache.iceberg.spark.source.SparkPartitioningAwareScan - Reporting UnknownPartitioning with 1 partition(s) for table polaris.olist_raw.test_connection\n",
+      "[07:50:07] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.spark.data.vectorized.VectorizedSparkParquetReaders - Enabling arrow.enable_unsafe_memory_access\n",
+      "[07:50:07] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.spark.data.vectorized.VectorizedSparkParquetReaders - Disabling arrow.enable_null_check_for_get\n",
+      "[07:50:07] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.shaded.org.apache.arrow.memory.BaseAllocator - Debug mode disabled. Enable with the VM option -Darrow.memory.debug.allocator=true.\n",
+      "[07:50:07] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.shaded.org.apache.arrow.memory.DefaultAllocationManagerOption - allocation manager type not specified, using netty as the default type\n",
+      "[07:50:07] [Executor task launch worker for task 0.0 in stage 1.0 (TID 2)] INFO  org.apache.iceberg.shaded.org.apache.arrow.memory.CheckAllocator - Using DefaultAllocationManager at memory/DefaultAllocationManagerFactory.class\n",
       "+---+--------+\n",
       "| id|  status|\n",
       "+---+--------+\n",
       "|  1| pending|\n",
+      "|  1| pending|\n",
+      "|  2|complete|\n",
       "|  2|complete|\n",
       "+---+--------+\n",
       "\n"
@@ -292,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ResponseMetadata': {'RequestId': '1886E7FC80C2C013', 'HostId': 'dd9025bab4ad464b049177c95eb6ebf374d3b3fd1af9251148b658df7ac2e3e8', 'HTTPStatusCode': 200, 'HTTPHeaders': {'accept-ranges': 'bytes', 'content-length': '543', 'content-type': 'application/xml', 'server': 'MinIO', 'strict-transport-security': 'max-age=31536000; includeSubDomains', 'vary': 'Origin, Accept-Encoding', 'x-amz-id-2': 'dd9025bab4ad464b049177c95eb6ebf374d3b3fd1af9251148b658df7ac2e3e8', 'x-amz-request-id': '1886E7FC80C2C013', 'x-content-type-options': 'nosniff', 'x-ratelimit-limit': '2031', 'x-ratelimit-remaining': '2031', 'x-xss-protection': '1; mode=block', 'date': 'Fri, 02 Jan 2026 11:56:15 GMT'}, 'RetryAttempts': 0}, 'Buckets': [{'Name': 'raw', 'CreationDate': datetime.datetime(2026, 1, 2, 11, 50, 21, 686000, tzinfo=tzlocal())}, {'Name': 'staging', 'CreationDate': datetime.datetime(2026, 1, 2, 11, 50, 21, 721000, tzinfo=tzlocal())}, {'Name': 'warehouse', 'CreationDate': datetime.datetime(2026, 1, 2, 11, 50, 21, 651000, tzinfo=tzlocal())}], 'Owner': {'DisplayName': 'minio', 'ID': '02d6176db174dc93cb1b899f7c6078f08654445fe8cf1b6ce98d8855f66bdbf4'}}\n"
+      "{'ResponseMetadata': {'RequestId': '18872923B65F34B5', 'HostId': 'dd9025bab4ad464b049177c95eb6ebf374d3b3fd1af9251148b658df7ac2e3e8', 'HTTPStatusCode': 200, 'HTTPHeaders': {'accept-ranges': 'bytes', 'content-length': '543', 'content-type': 'application/xml', 'server': 'MinIO', 'strict-transport-security': 'max-age=31536000; includeSubDomains', 'vary': 'Origin, Accept-Encoding', 'x-amz-id-2': 'dd9025bab4ad464b049177c95eb6ebf374d3b3fd1af9251148b658df7ac2e3e8', 'x-amz-request-id': '18872923B65F34B5', 'x-content-type-options': 'nosniff', 'x-ratelimit-limit': '2051', 'x-ratelimit-remaining': '2051', 'x-xss-protection': '1; mode=block', 'date': 'Sat, 03 Jan 2026 07:50:12 GMT'}, 'RetryAttempts': 0}, 'Buckets': [{'Name': 'raw', 'CreationDate': datetime.datetime(2026, 1, 3, 7, 43, 40, 415000, tzinfo=tzlocal())}, {'Name': 'staging', 'CreationDate': datetime.datetime(2026, 1, 3, 7, 43, 40, 447000, tzinfo=tzlocal())}, {'Name': 'warehouse', 'CreationDate': datetime.datetime(2026, 1, 3, 7, 43, 40, 378000, tzinfo=tzlocal())}], 'Owner': {'DisplayName': 'minio', 'ID': '02d6176db174dc93cb1b899f7c6078f08654445fe8cf1b6ce98d8855f66bdbf4'}}\n"
      ]
     }
    ],
